change second profile

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </div>
             </div>
             <div class="message">
-                <img class="image-profile" src="./images/profile-2.JPG" alt="yo1">
+                <img class="image-profile" src="./images/Luis_Angel.jpg" alt="yo1">
                 <div class="comment">
                     <h3>luis_angelfc11 (18)</h3>
                     <p>¡Feliz cumpleaños Osita! Espero que la pases súper bien y que todos tus sueños y metas se cumplan. Eres una chica única, la cual agradezco de tener en mi vida. De mi parte trataré de hacer todo lo posible para que tengas un feliz día. HBD, te quiero🎈🎉</p>
